tests/lang/compile_fail/match_nested_partial_exhaustive.kojs
enum Color
  Red
  Green
end

value: Option<Color> = Option.Some(Color.Green)

match value
  Option.Some(Color.Red) -> "red"
  Option.None -> "none"
end
